@@ -22,9 +22,4 @@
     url_expr="string:${object_url}/base_edit" visible="True">
   <permission value="Modify portal content"/>
  </action>
- <action title="Properties" action_id="metadata" category="object"
-    condition_expr="" url_expr="string:${object_url}/base_metadata"
-    visible="True">
-  <permission value="Modify portal content"/>
- </action>
 </object>
