@@ -31,10 +31,4 @@
      i18n:attributes="title">
   <permission value="Modify portal content"/>
  </action>
- <action title="Folder Listing" action_id="folderlisting" category="folder"
-    condition_expr="object/isPrincipiaFolderish"
-    url_expr="string:${folder_url}/view" visible="False"
-    i18n:attributes="title">
-  <permission value="View"/>
- </action>
 </object>
